After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 687923 - Broken date/time examples
Broken date/time examples
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Region & Language
3.6.x
Other Linux
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
3.10
: 676364 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2012-11-08 12:22 UTC by Bastien Nocera
Modified: 2017-05-25 10:18 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Use %x,%X and %c formats only (9.42 KB, patch)
2014-04-27 13:21 UTC, Changwoo Ryu
committed Details | Review

Description Bastien Nocera 2012-11-08 12:22:59 UTC
Using France (French) shows:
"CET" for the current date
UK English shows:
1:21:32 pm CET CET

The dates also seem to have spaces between the number and the month.
Comment 1 Bastien Nocera 2012-12-05 09:26:29 UTC
*** Bug 676364 has been marked as a duplicate of this bug. ***
Comment 2 Changwoo Ryu 2013-07-10 06:55:44 UTC
In panels/region/cc-format-chooser.c

        dt = g_date_time_new_now_local ();
        display_date (priv->full_date, dt, "%A %e %B %Y");
        display_date (priv->medium_date, dt, "%e %b %Y");
        display_date (priv->short_date, dt, "%x");
        display_date (priv->time, dt, "%X");


A solution is to remove these two hard coded date formats. They are useless anyway.

Or they can be "translated", but then the UI will be out of the purpose of displaying the time locale information.
Comment 3 Changwoo Ryu 2014-03-02 10:27:27 UTC
Maybe only locale aware full formats can be used, like:

        display_date (priv->date, dt, "%x");
        display_date (priv->time, dt, "%X");
        display_date (priv->date_time, dt, "%a");
Comment 4 Changwoo Ryu 2014-04-27 13:21:17 UTC
Created attachment 275258 [details] [review]
Use %x,%X and %c formats only

OK, here is my proposal. Remove the formats and only use locale-aware "%x", "%X" and "%c".
Comment 5 Changwoo Ryu 2014-10-17 22:25:25 UTC
Any opinion? This old bug is quite obvious.
Comment 6 Marek Černocký 2015-06-15 07:37:36 UTC
I recently noticed this error. As a translator (the Czech language) I agree with using formats %c, %x and %X as examples and I ask for early commit. The current form is confusing for users.
Comment 7 Piotr Drąg 2017-05-24 14:54:26 UTC
Any progress here would be appreciated.
Comment 8 Rui Matos 2017-05-25 10:17:13 UTC
Review of attachment 275258 [details] [review]:

looks good, I'll amend the commit subject to fit our pattern before pushing, thanks!