region: Use locale aware date time formats for previewing

%x for date, %X for time, %c for date&time.

https://bugzilla.gnome.org/show_bug.cgi?id=687923